# notice_board

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/backend/: settings.py  urls.py
backend/board/: serializers.py  tests.py
board/: access_policies.py  admin.py  models.py  serializers.py  urls.py  views.py
board/migrations/: 0001_initial.py
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.js  index.js
frontend/src/api/: auth.js  client.js  comments.js  notices.js  users.js
frontend/src/components/: CommentForm.js  Header.js  Notice.js  NoticeCreationForm.js  NoticeForm.js  NoticeList.js
frontend/src/pages/: Login.js  Notice.js  Notices.js  Profile.js  Signup.js
notice_board/: settings.py  urls.py
