[tool.poetry]
name = "notice-board"
version = "0.1.0"
description = ""
authors = ["antos07 <trotsenko.ant07@gmail.com>"]
readme = "README.md"
packages = [{include = "notice_board"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
psycopg = "^3.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
